test JVM PretenereSizeThreshold